daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N21_bad_mlkem_ciphertext/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658405f8ed23acecce3a690d5bf184550708aec07d4635ec68065b042578917a33c760deae032dc592c2f0ab7fde30edc74f5eefd7c03e8b9d3dc319fb5aadc142f05
